Modified endpoint test and docs
